code inspection changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,7 +112,8 @@
             app:layout_constraintHorizontal_bias="0.505"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo_black_square" />
+            app:srcCompat="@drawable/logo_black_square"
+            android:contentDescription="game logo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
