--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -18,7 +18,7 @@
             android:id="@+id/logo2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="44dp"
+            android:layout_marginTop="92dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -39,14 +39,16 @@
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.555" />
 
         <EditText
             android:id="@+id/answer"
             android:layout_width="137dp"
             android:layout_height="45dp"
-            android:layout_marginBottom="228dp"
+            android:layout_marginBottom="196dp"
             android:background="#00BCD4"
             android:ems="10"
             android:focusable="auto"
@@ -57,6 +59,37 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/timer"
+            android:layout_width="124dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="40dp"
+            android:editable="false"
+            android:enabled="false"
+            android:fontFamily="casual"
+            android:inputType="time"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/score"
+            android:layout_width="124dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="256dp"
+            android:layout_marginTop="40dp"
+            android:editable="false"
+            android:enabled="false"
+            android:fontFamily="casual"
+            android:inputType="numberDecimal"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:text="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
