fixed display of time and score remove keyboard when game finishes

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -11,44 +11,24 @@
         android:layout_height="match_parent"
         android:background="#000000"
         tools:context=".MainActivity"
-        tools:layout_editor_absoluteX="62dp"
-        tools:layout_editor_absoluteY="-56dp">
+        tools:layout_editor_absoluteX="-28dp"
+        tools:layout_editor_absoluteY="-78dp">
 
         <ImageView
             android:id="@+id/logo2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="92dp"
+            android:layout_marginTop="44dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/logo_black_square" />
 
         <EditText
-            android:id="@+id/rand_num"
-            android:layout_width="186dp"
-            android:layout_height="74dp"
-            android:editable="false"
-            android:ems="10"
-            android:enabled="false"
-            android:fontFamily="casual"
-            android:inputType="numberDecimal"
-            android:text="Random"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.555" />
-
-        <EditText
             android:id="@+id/answer"
             android:layout_width="137dp"
             android:layout_height="45dp"
-            android:layout_marginBottom="196dp"
+            android:layout_marginTop="32dp"
             android:background="#00BCD4"
             android:ems="10"
             android:focusable="auto"
@@ -56,40 +36,86 @@
             android:inputType="numberDecimal"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <EditText
-            android:id="@+id/timer"
-            android:layout_width="124dp"
-            android:layout_height="38dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="40dp"
-            android:editable="false"
-            android:enabled="false"
-            android:fontFamily="casual"
-            android:inputType="time"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/rand_num" />
 
         <EditText
-            android:id="@+id/score"
-            android:layout_width="124dp"
-            android:layout_height="38dp"
-            android:layout_marginStart="256dp"
-            android:layout_marginTop="40dp"
+            android:id="@+id/rand_num"
+            android:layout_width="186dp"
+            android:layout_height="74dp"
+            android:layout_marginTop="32dp"
             android:editable="false"
+            android:ems="10"
             android:enabled="false"
             android:fontFamily="casual"
             android:inputType="numberDecimal"
+            android:text="0x0"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:text="0"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/timer"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/timer3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="12dp"
+            android:fontFamily="serif-monospace"
+            android:text="Score:"
+            android:textColor="#00BCD4"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/score"
+            app:layout_constraintTop_toBottomOf="@+id/logo2" />
+
+        <TextView
+            android:id="@+id/timer2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="32dp"
+            android:fontFamily="serif-monospace"
+            android:text="Time Left:"
+            android:textColor="#00BCD4"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logo2" />
+
+        <TextView
+            android:id="@+id/timer"
+            android:layout_width="55dp"
+            android:layout_height="23dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp"
+            android:fontFamily="serif-monospace"
+            android:text="TextView"
+            android:textColor="#00BCD4"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/timer2"
+            app:layout_constraintTop_toBottomOf="@+id/logo2" />
+
+        <TextView
+            android:id="@+id/score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="72dp"
+            android:fontFamily="serif-monospace"
+            android:text="0"
+            android:textColor="#00BCD4"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logo2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
