added best score some modifications to game layout

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -10,19 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#000000"
-        tools:context=".MainActivity"
-        tools:layout_editor_absoluteX="-28dp"
-        tools:layout_editor_absoluteY="-78dp">
-
-        <ImageView
-            android:id="@+id/logo2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="44dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo_black_square" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:context=".MainActivity">
 
         <EditText
             android:id="@+id/answer"
@@ -54,46 +48,16 @@
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/timer"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <TextView
-            android:id="@+id/timer3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="12dp"
-            android:fontFamily="serif-monospace"
-            android:text="Score:"
-            android:textColor="#00BCD4"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/score"
-            app:layout_constraintTop_toBottomOf="@+id/logo2" />
-
-        <TextView
-            android:id="@+id/timer2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="32dp"
-            android:fontFamily="serif-monospace"
-            android:text="Time Left:"
-            android:textColor="#00BCD4"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/logo2" />
+            app:layout_constraintTop_toBottomOf="@+id/timer2" />
 
         <TextView
             android:id="@+id/timer"
             android:layout_width="55dp"
             android:layout_height="23dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="28dp"
             android:layout_marginTop="32dp"
             android:fontFamily="serif-monospace"
             android:text="TextView"
@@ -101,21 +65,49 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/timer2"
-            app:layout_constraintTop_toBottomOf="@+id/logo2" />
+            app:layout_constraintTop_toBottomOf="@+id/score" />
+
+        <TextView
+            android:id="@+id/timer2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="112dp"
+            android:layout_marginTop="32dp"
+            android:fontFamily="serif-monospace"
+            android:text="Time Left:"
+            android:textColor="#00BCD4"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/timer3" />
+
+        <TextView
+            android:id="@+id/timer3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="112dp"
+            android:layout_marginTop="72dp"
+            android:fontFamily="serif-monospace"
+            android:text="Score:"
+            android:textColor="#00BCD4"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="72dp"
+            android:layout_marginStart="72dp"
+            android:layout_marginTop="72dp"
             android:fontFamily="serif-monospace"
             android:text="0"
             android:textColor="#00BCD4"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/logo2" />
+            app:layout_constraintStart_toEndOf="@+id/timer3"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
